userlist starter code; fixed scrollbar problems on windows

--- a/css/cells.css
+++ b/css/cells.css
@@ -130,7 +130,7 @@
 .python-editor {
   min-height: 200px;
   max-height: 600px;
-  overflow-y: scroll;
+  overflow-y: auto;
   margin: 0;
 }
 
